2011-01-07 Thunor <thunorsif_at_hotmail.com>
* Added support for the mouse wheel: remapped as keyboard cursor keys.

2010-12-20 Thunor <thunorsif_at_hotmail.com>
* Added show_input_id to the rcfile (was a CLI option).
* Implemented variable emulation speed but I haven't yet managed to
  iron out the problems with slowing down and speeding up the sound
  (if at all I can) so I've disabled the code for the time being.

2010-12-18 Thunor <thunorsif_at_hotmail.com>
* Added sound device selection to the runtime options.
* Added sound device to the rcfile.

2010-12-15 Thunor <thunorsif_at_hotmail.com>
* Added frameskip adjustment to the runtime options.
* Added frameskip to the rcfile.

2010-12-14 Thunor <thunorsif_at_hotmail.com>
* Added RAM size changing to the runtime options.
* Added RAM size to the rcfile.

2010-12-13 Thunor <thunorsif_at_hotmail.com>
* Added vkeyb autohide, toggle_shift and alpha to the rcfile.
* Added invert screen to the rcfile.

2010-12-12 Thunor <thunorsif_at_hotmail.com>
* Added machine model switching to the runtime options.
* Added machine model to the rcfile.

2010-12-08 Thunor <thunorsif_at_hotmail.com>
* Added support for (in addition to z81's 1K to 16K) 32K, 48K and 56K of
  RAM. load_p now loads up to 48K instead of z81's 16K limit.

2010-12-07 Thunor <thunorsif_at_hotmail.com>
* Added support for a thorough runtime reinitialisation of z81 (sz81
  was tweaked a little). RAM and ROM changes have been tested to work.

2010-12-06 Thunor <thunorsif_at_hotmail.com>
* Added a function to preload the ROMs which will enable the emulator
  to switch between them at runtime without repeatedly loading them.
* Modified vkeyb_init to load both keyboard images on initialisation.

2010-12-05 Thunor <thunorsif_at_hotmail.com>
* Added two runtime options pages and moved the original two.
* Modified the ZX printer filename to include the date and time.

2010-12-04 Chris Young <chris_at_unsatisfactorysoftware.co.uk>