@@ -115,6 +115,7 @@ int sdl_init(void) {
 	sdl_com_line.xres = UNDEFINED;
 	sdl_com_line.yres = UNDEFINED;
 	sdl_com_line.filename[0] = 0;
+	sdl_com_line.autoload = FALSE;
 
 	/* Initialise other things that need to be done before sdl_video_setmode */
 	sdl_emulator.state = TRUE;
@@ -210,6 +211,7 @@ int sdl_com_line_process(int argc, char *argv[]) {
 				sdl_filetype_casecmp(argv[count], ".p") == 0 ||
 				sdl_filetype_casecmp(argv[count], ".81") == 0) {
 				strcpy(sdl_com_line.filename, argv[count]);
+				sdl_com_line.autoload = TRUE;
 			} else {
 				/*   1234567890123456789012345678901234567890 <- Formatting for small terminal. */
 				fprintf (stdout,
@@ -251,6 +253,7 @@ int sdl_com_line_process(int argc, char *argv[]) {
 		printf("  sdl_com_line.xres=%i\n", sdl_com_line.xres);
 		printf("  sdl_com_line.yres=%i\n", sdl_com_line.yres);
 		printf("  sdl_com_line.filename=%s\n", sdl_com_line.filename);
+		printf("  sdl_com_line.autoload=%i\n", sdl_com_line.autoload);
 	#endif
 
 	return FALSE;
